<resources>
    <string name="app_name">YKS - LYS Edebiyat Yazar - Eser Bilgi Yarışması</string>
    <string name="bullet_point">• </string>
    <string name="github_url">https://github.com/lys-edebiyat</string>
    <string name="dialog_next_question">Sıradaki Soru</string>
    <string name="dialog_correct_answer">Doğru: %1$d</string>
    <string name="dialog_wrong_answer">Yanlış: %1$d</string>
    <string name="dialog_era_selection_title">Dönem Seç</string>
    <string name="dialog_era_selection_save">Kaydet</string>
    <string name="title_activity_yazar_eser_liste">YazarEserListe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="share_text">
        Süper bir uygulama buldum! Adı "YKS Edebiyat Yazar - Eser Bilgi Yarışması".
        İndir, beraber oynayalım.\n\n
        Appstore: https://appsto.re/tr/SA1agb \n\n
        Play Store: https://play.google.com/store/apps/details?id=io.cordova.lysedebiyat\n\n
        Web: http://lys-edebiyat.github.io
    </string>
    <string name="share_dialog_title">Paylaş</string>
    <string name="back_to_game"><b>Oyuna dön</b></string>
    <string name="era_selection_title"><b>Dönem Seç</b></string>
    <string name="era_list_title"><b>Dönem Listesi</b></string>
    <string name="author_list_title"><b>Yazar Listesi</b></string>
    <string name="open_in_web"><b>Tarayıcıda Aç</b></string>
    <string name="share"><b>Paylaş</b></string>
    <string name="rate_on_store"><b>Puan Ver</b></string>
    <string name="about_exam"><b>YKS Bilgilendirme</b></string>
    <string name="about_us"><b>Hakkımızda</b></string>
    <string name="contact_us"><b>İletişim</b></string>
    <string name="settings"><b>Ayarlar</b></string>
    <string name="about_us_title">Hakkımızda</string>
    <string name="about_us_header_one">YKS - LYS Edebiyat</string>
    <string name="about_us_header_two">Yazar - Eser\nBilgi Yarışması</string>
    <string name="about_us_version_title"><u>Sürüm Bilgisi</u></string>
    <string name="application_database_version">3</string>
    <string name="about_us_version_number">v2.1.0</string>
    <string name="about_us_version_content"><b>v2.1.0</b> numaralı sürümü kullanıyorsun gibi görünüyor.
        Bu sürüm ile birlikte veri seti içerisinde bazı güncellemeler hazırladık. Bununla beraber
        sınav adının değişmesine istinaden biz de uygulama adımızı güncelledik, belki farketmişsindir.
        Aynı şekilde sınav döneminde sana yardımcı olacağını umduğumuz bazı bilgileri eklemeyi planlıyoruz.
        Aklına takılan, eleştirmek istediğin, hatalı gördüğün herhangi bir şey olursa menüdeki "İletişim"
        sekmesinden bize ulaşabilirsin.\n\nYine bu sürüm ile beraber uygulama içerisine bazı reklamlar
        koyduk, farkedeceksin muhtemelen.
        Bu uygulamayı 1 seneden fazla bir süredir, hiç bir kazancımız olmadan geliştiriyoruz, fakat
        bu süre dahilinde zamanımız hariç sunucu ve geliştirici masraflarımız oluyor ve tüm bunları
        cebimizden karşılıyoruz. Bunun önüne geçmek adına uygulama içerisinde seni rahatsız etmeyecek
        düzeyde tutmaya çalıştığımız bazı reklamlar oluşturduk. Reklamların sık sık karşına çıkıp senin
        deneyimini kötü etkilemesinin de önüne geçmeye çalıştık, umuyoruz ki uygulamayı kullanma deneyimini
        kötü yönde etkilemez bu değişiklik. Bu bizim için bir mecburiyet haline geldiği için bu reklamları
        kullanmak zorunda kaldık; aksi takdirde uygulamayı paralı hale getirmemiz gerekecekti ki bizler de
        öğrenci olduk, senin halinden anlıyoruz, dolayısıyla bunu yapmayı tercih etmedik, durum budur.\n\nBundan
        önceki sürümde <b>dönem seçme özelliğini getirdik</b>. Ek olarak veri setinde bazı güncellemeler yaptık.\n\nGenel olarak
        v2 sürümüyle beraber uygulamayı tamamen baştan
        yazdık, daha hızlı ve daha kullanışlı hale getirdik.\n\nArtık uygulama içerisinde <b>\"Dönem Listesi\"</b>
        sekmesinden dönemlerine göre ayrılmış yazar ve eserlere ulaşabilirsin.
        Aynı şekilde <b>\"Yazar Listesi\"</b> sekmesinden de tüm yazarlar ve
        eserlerinin alfabetik olarak sıralı haline ulaşabilirsin. Aynı zamanda uygulamanın boyutunu da %95 küçülttük, artık çok daha az yer kaplayacak.
        Bununla beraber artık uygulamayı arkadaşlarınla da paylaşabileceksin, menüdeki <b>\"Paylaş\"</b> butonunu denemeni
        öneriyoruz.
        Hazırladığımız bu yeni altyapı sayesinde daha hızlı bir şekilde güncelleme yayınlamayı umuyoruz.
    </string>
    <string name="about_us_authors">Burak Karakan &amp; Furkan Hatipoğlu</string>
    <string name="about_us_why_title"><u>Neden var?</u></string>
    <string name="about_us_why_content">LYS Edebiyat Yazar Kitap Bilgi Yarışması elimizde bulunan
        bir veri setini kullanışlı hale getirmek üzere tasarladığımız bir proje aslen. Yazarların ve
        eserlerin bulunduğu bu veri setini çeşitli işlemlerden geçirerek uygulamanın ilk halini hazırladık.
        Arkasından zaman içerisinde adım adım geliştirmeye devam ettik, dönemlere dair bilgiler derledik,
        uygulamaları daha kullanışlı hale getirmeye çalıştık, geri bildirimler sayesinde veri setimizdeki hataları
        düzelttik, yeni eser ve yazarlar ekledik. Bugün iOS ve Android platformlarında on binlerce öğrencinin
        kullandığı bir uygulama haline geldi bu proje, büyümeye de devam ediyor.\n\nBaşından beri bu uygulamanın öğrencilere faydalı olması için çabaladık.
        Uygulamayı günlük işlerimizin yanında geliştirmeye çalışıyoruz,
        dolayısıyla yeni özellikler eklemek, hataları düzeltmek gibi güncellemeleri sunmamız biraz vakit alabiliyor.
        Bu süreçte anlayışlı olduğunuz için teşekkür ederiz.
    </string>
    <string name="about_us_details_title"><u>Nasıl geliştiriyoruz?</u></string>
    <string name="about_us_details_content">
        Uygulamaların tümünü açık kaynak olarak geliştiriyoruz, yani kullandığımız tüm uygulama kodları
        GitHub üzerinden erişilebilir durumda. Aynı şekilde oyun içerisindeki soruları oluştururken
        kullandığımız veri setimizi de tamamen açık kaynak olarak GitHub\'da tutuyoruz. Dolayısıyla,
        aklında olan bir özelliği sen de uygulamalara ekleyebilirsin; aynı şekilde elinde
        farklı veri setleri var ise veya hatalı bir veriyi düzeltmek istersen yine GitHub üzerinden
        düzeltme yapabilirsin.
    </string>
    <string name="view_on_github">GitHub\'da Görüntüle</string>
    <string name="about_us_developers_title"><u>Geliştiriciler</u></string>
    <string name="about_us_developers_content">Burak Karakan &amp; Furkan Hatipoğlu</string>
    <string name="about_exam_title">YKS Hakkında</string>
    <string name="what_is_exam_title">YKS nedir?</string>
    <string name="what_is_exam_content">Yüksek Öğretim Kurumları Sınavı (YKS), lise diploması
        olan herkesin üniversiteye geçebilmek için girmesi gereken ÖSYM sınavıdır.</string>
    <string name="about_system_title">Sistem nasıl olacak?</string>
    <string name="about_system_content">Adaylar, Haziran ayının içinde bir Cumartesi günü, sabah ve
        öğlen olarak iki oturuma tâbi tutulacak. Sabah olan oturum Türkçe ve Matematik olarak iki
        bölümden oluşacak. Bu sınavda 150 puanı geçebilen adaylar ön lisans tercihinde bulunmaya,
        180 puanı geçen adaylar da ikinci oturuma girebilmeye hak kazanacaklar ve sınavda 200 puanı
        geçebilen adaylar 2 sene boyunca bu puanı kullanabilme hakkına sahip olacak. Bu oturumdan
        sonra, adayların temel ihtiyaçlarını karşılayabilmeleri yanı sıra zihinsel olarak da
        rahatlamaları için bir öğle arası verilecek. İkinci oturumda ise, eski sistemdeki LYS gibi,
        Edebiyat - Coğrafya, Sosyal Bilimler, Matematik ve Fen Bilimleri olarak dört dal yer alacak
        ve aday kendi alanının ihtiyaç duyduğu testleri çözecek.</string>
    <string name="question_count_title">Kaç soru olacak?</string>
    <string name="question_count_content">İlk oturumda 40 soru Türkçe , 40 soru Matematik,
        toplam 80 soru olacak. Adaylara tanınan süre 80 dakika olacak. İkinci oturumda,
        Türk Dili ve Edebiyatı-Coğrafya 1 40 soru, Sosyal Bilimler 40 soru, Matematik 40 soru ve
        Fen Bilimleri 40 soru olacak.</string>
    <string name="scoring_title">Puanlama nasıl olacak?</string>
    <string name="scoring_content" formatted="false">Önlisans programlarında Temel Yeterlilik
        Testi Puanı (TYT Puanı) esas alınmakta. Bu TYT puanı ise şu şekilde hesaplanıyor: Türkçe testinden
        alınan puanın yarısı ile Matematik testinden alınan puanın yarısı toplanıyor.
        Lisans programlarında ise Sözel, Sayısal, Eşit Ağırlık ve Dil olmak üzere dört puan türü mevcut.
        Bu puan türlerinin tümü hesaplanırken TYT puanının %40\'ı ve ilgili alan puanının %60\'ı toplanacak.</string>
    <string name="topics_title">Sınavda hangi konular var?</string>
    <string name="topics_content">Sınavda şu an için hangi konuların çıkacağı belli olmamakla beraber
    geçmiş sınavlar göz önüne alındığında şu konuların çıkma ihtimalleri yüksek görünmekte:\n\n
    • Güzel Sanatlar ve Edebiyat\n
    • Metinlerin Sınıflandırılması\n
    • Coşku ve Heyecanı Dile Getiren Metinler\n
    • Şiir Bilgisi\n
    • Öğretici Metinler\n
    • Sözlü Anlatım Türleri\n
    • Edebi Sanatlar (Söz Sanatları)\n
    • Nazım Biçimleri ve Türleri\n
    • İslamiyet Kabulü Öncesi Türk Edebiyatı\n
    • İslami Dönem İlk Dil ve Edebiyat Ürünleri\n
    • Oğuz Türkçesinin İlk Ürünleri\n
    • Halk Edebiyatı\n
    • Divan Edebiyatı\n
    • Tanzimat Edebiyatı\n
    • Servet-i Fünun Edebiyatı\n
    • Fecri-Ati Edebiyatı\n
    • Milli Edebiyat\n
    • Cumhuriyet Döneminde Türk Edebiyatı\n
    • Türkiye Dışındaki Türk Edebiyatı\n
    • Edebi Akımlar\n
    • Dünya Edebiyatı\n
    • Türk Edebiyatı Eser Özetleri\n
    • Türk ve Dünya Edebiyatındaki İlkler\n
    </string>
    <string name="important_authors"><u>Önemli Yazarlar</u></string>
    <string name="detailed_info">Daha detaylı bilgi için tıklayın</string>
    <string name="play_store_not_opened">Üzgünüm, Play Store açılamadı.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Ayarlar</string>
</resources>